@@ -788,6 +788,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 #define cSetting_pdb_formal_charges         584
 #define cSetting_ati_bugs                   585
 #define cSetting_geometry_export_mode       586
+#define cSetting_mouse_grid                 587
 
 /* when you add a new setting also remember:
    layer1/Setting.c
@@ -797,7 +798,7 @@ CSetting *SettingNewFromPyList(PyMOLGlobals *G,PyObject *list);
 
 /* cSetting_ss_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                       587
+#define cSetting_INIT                       588
 
 #endif
 
