@@ -4,6 +4,10 @@ CHANGE LOG
 
 2008-05-28 Warren L. DeLano <warren@delsci.com>	
 
+	* added mouse_grid setting for hiding the mouse/keyboard info
+	
+2008-05-28 Warren L. DeLano <warren@delsci.com>	
+
 	* finished .MAE reader (at least for now...)
 
 	* quashed race conditions associated with the geometry cache
